# Context-engineered-RAG-Agent

./: .env.example  .gitignore  README.md  context-engineered-agent-plan.md  pyproject.toml
corpus/documents/: Finance_Fiscal_Year_2026_Audit_Prep.txt  Finance_Quarterly_Budget_Allocation.txt  Finance_Travel_and_Expense_Policy.txt  Finance_Vendor_Payment_Terms.txt  HR_2023_Remote_Work_Policy.txt  HR_2026_Return_To_Office_Mandate.txt  HR_Employee_Onboarding_Guide.txt  HR_Performance_Review_Process.txt  IT_Data_Classification_Standard.txt  IT_Delta_Project_Contact_Directory.txt  IT_Helpdesk_Escalation_Matrix.txt  IT_TRITON_System_Access_Protocol.txt  Legal_Anti_Corruption_Compliance.txt  Legal_Contract_Review_Process.txt  Legal_Data_Privacy_GDPR_Compliance.txt  Legal_Intellectual_Property_Protection.txt  Operations_14_Day_SLA_Commitment.txt  Operations_EHRC_Cycle_Maintenance.txt  Operations_Facility_Access_Control.txt  Operations_Supply_Chain_Contingency.txt
docs/: agent-code-ref.md  context-engineering-code-ref.md  evals-code-ref.md  implementation-plan.md  observability-code-ref.md  setup-pinecone-phoenix.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
scripts/: __init__.py  ingest_documents.py  run_evals.py  run_experiment.py  run_test_suite.py
src/: __init__.py  config.py  graphy.py  token_utils.py  tracing.py
src/evals/: __init__.py  evaluators.py  experiment.py  extract.py
src/models/: schemas.py  state.py
src/nodes/: __init__.py  context_enforcer.py  (+6 more)
tests/: test_memory_store.py  test_router.py  text_context_enforcer.py
(+2 files in other folders)
