[project]
name = "context-engineered-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-google-genai",
    "langchain-pinecone",
    "pinecone",
    "arize-phoenix",
    "openinference-instrumentation-langchain",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "tiktoken",
    "pydantic>=2.0",
    "python-dotenv",
    "google-generativeai",
]